2003-06-30  Richard Henderson  <rth@redhat.com>

	* include/sys/resource.h (__getrusage): Mark hidden.
	* include/sys/time.h (__settimeofday, __setitimer, __utimes): Likewise.
	* include/sys/wait.h (__wait4): Likewise.

2003-06-17  Guido Guenther  <agx@sigxcpu.org>

	* sysdeps/unix/sysv/linux/mips/xstatconv.c: Handle STAT_IS_KERNEL_STAT
	case.
	(xstat_conv): Rename to __xstat_conv and remove static inline.
	(xstat64_conv): Likewise.

2003-06-29  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/sleep.c (__sleep): Handle parameter
	values which cannot be handled in one nanosleep call.

2003-06-25  Alfred M. Szmidt  <ams@kemisten.nu>

	* sysdeps/generic/bits/in.h (IPV6_HOPOPTS, IPV6_DSTOPTS): New macros.
	(IPV6_RXHOPOPTS, IPV6_RXDSTOPTS): Use them.

	* sysdeps/generic/ifreq.h (__if_nextreq) [_HAVE_SA_LEN]: Typo fix.

2003-06-04  Thorsten Kukuk  <kukuk@suse.de>

	* sysdeps/unix/sysv/linux/net/if_arp.h: Sync with kernel header,
	fix typo.

2003-06-26  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/unix/sysv/linux/xstatconv.h [!STAT_IS_KERNEL_STAT]:
	Conditionalize function definitions that use struct kernel_stat.
	* sysdeps/unix/sysv/linux/fxstat.c: Remove __syscall_fstat extern.
	* sysdeps/unix/sysv/linux/lxstat.c: Remove __syscall_lstat extern.
	* sysdeps/unix/sysv/linux/xstat.c: Remove __syscall_stat extern.

2003-06-28  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/s390/semtimedop.c (semtimedop): Add real
	implementation.

2003-06-07  Thorsten Kukuk  <kukuk@suse.de>

	* nis/nss_compat/compat-grp.c: Remove unused nis_first variable
	(getgrent_next_file) Don't store group name to early in blacklist.

	* nis/nss_compat/compat-pwd.c (internal_getpwuid_r): Save strlen result
	and use memcpy instead of strcpy.

2003-06-28  Ulrich Drepper  <drepper@redhat.com>

	* nis/nss_compat/compat-grp.c: Optimize several little things.  Use
	stream unlocked.
	* nis/nss_compat/compat-initgroups.c: Likewise.
	* nis/nss_compat/compat-pwd.c: Likewise.